--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 	"license": "MIT",
 	"author": "Kagi Search",
 	"type": "module",
+	"engines": {
+			"node": "20.x",
+			"npm": "10.x"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
